--- a/pan-map/src/App.css
+++ b/pan-map/src/App.css
@@ -79,17 +79,18 @@ ul {
 }
 
 li {
+    height: 100%;
     width: 140px;
     margin: 0;
     padding: 0;
     float: left;
-    height: 80px;
+    /* height: 80px; */
     background-color: #633608;
 }
 
 li a {
     margin: 0;
-
+    height: 100%;
     color: #fff;
     text-decoration: none;
     padding: 14px 12px;
@@ -98,6 +99,8 @@ li a {
 }
 
 li a:hover {
+    margin: 0;
+    height: 80px;
     background-color: #B19168;
 }
 
@@ -114,7 +117,6 @@ li:hover>ul {
 li ul li {
     position: relative;
 }
-
 
 .contenedor-cards {
     height: auto;
@@ -207,6 +209,24 @@ h5 {
 
 }
 
+.hero-detalle-fondo {
+    /* background-image: url(./Images/pan.svg); */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: red;
+    height: 16vw;
+
+}
+
+
+
+#hero {
+    display: flex;
+    justify-content: center;
+
+}
+
 .NavBarSearch {
     /* background-color: blue;  */
     display: flex;
@@ -215,16 +235,10 @@ h5 {
     top: -40px;
 }
 
-#hero {
-    display: flex;
-    justify-content: center;
-
-}
-
 .search {
     display: flex;
     justify-content: center;
-    width: 38%;
+    width: 40%;
     padding: 0 2rem;
     align-items: center;
     background-color: #B19168;
@@ -236,23 +250,18 @@ h5 {
 }
 
 .search-li {
-    width: 28.25%;
-    background-color:#B19168;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    width: 30%;
+    background-color: #B19168;
 }
 
 .search-li a:hover {
-    width: 100%;
     background-color: #633608;
 }
 
 .search input {
     padding: .8rem 1rem;
-    width: 60%;
-    height: .9rem;
+    width: 80%;
+    height: 2.5rem;
     border: none;
     background-color: rgba(255, 255, 255, .8);
 }
@@ -267,4 +276,112 @@ h5 {
     width: 80%;
     background-color: blue;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.detalle-caja {
+    /* background-color: blue; */
+    height: 6rem;
+    width: 80%;
+    margin: 0 10%;
+    position: relative;
+    top: -4rem;
+    display: flex;
+    justify-content: space-between;
+
+}
+
+#hero-detalle {
+    display: flex;
+    justify-content: center;
+    height: auto;
+}
+
+.detalle-titulo {
+    height: 100%;
+    width: 60%;
+    background-color: #B19168;
+    padding: 1rem 2rem;
+    display: flex;
+    align-items: center;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+}
+
+.detalle-titulo h2 {
+    font-size: 2.4rem;
+    line-height: 2.6rem;
+    color: white;
+    font-weight: 400;
+}
+
+.detalle-caja button {
+    border: none;
+    background-color: #B19168;
+    border-radius: 50%;
+    height: 6rem;
+    width: 6rem;
+    padding: 0;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.contenido-detalle {
+    position: relative;
+    top: -2rem;
+    background-color: whitesmoke;
+    height: auto;
+    margin: 0 10%;
+    height: auto;
+    width: 80%;
+    padding: 2rem 3rem;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    display: flex;
+}
+
+.detalle-subtitulo {
+    display: flex;
+    justify-content: space-between;
+}
+
+.info-detalle {
+    width: 57%;
+    height: 100%;
+    /* background-color: yellow; */
+    padding: 0 2rem;
+}
+
+.detalle-direccion {
+    margin-left: 3%;
+    width: 40%;
+    display: block;
+    height: auto;
+    /* background-color: violet; */
+}
+
+.info-detalle p {
+    font-size: 1rem;
+    margin-top: 1rem;
+    margin-bottom: 1.5rem;
+}
+
+.calificacion-detalle {
+    margin-top: 1rem;
+    width: 50%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.estrella-detalle {
+    background-image: url(./Images/estrellas.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    margin-top: 1rem;
+    width: 20%;
+    height: 2.2rem;
+}
+
+.detalle-direccion-titulo {
+    height: 20%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
