--- a/pan-map/src/App.css
+++ b/pan-map/src/App.css
@@ -96,7 +96,7 @@ li a {
     text-decoration: none;
     padding: 14px 12px;
     display: block;
-    background-color: red;
+    /* background-color: red; */
 }
 
 li a:hover {
@@ -180,6 +180,7 @@ li ul li {
 }
 
 .calificacion {
+    margin-top: .6rem;
     display: flex;
     justify-content: space-between;
 }
@@ -385,4 +386,19 @@ h5 {
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+
+.menu-opcion{
+    padding-top:10px;
+    /* background-color:red; */
+    height:88px!important;
+    top:0;
+    position:relative;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+}
+
+.menu-opcion a{
+    width:100%;
 }
